--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^6.5.8",
-    "@react-navigation/native": "^6.1.2",
-    "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/drawer": "^6.1.3",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "axios": "^1.2.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^3.13.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
