--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.13.0",
     "react-native-vector-icons": "^9.2.0"
