--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.4",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.13.0",
