--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^1.2.3",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.2.0",
