--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.13.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
