--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.13.0",
